--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
 
     <div class="banner">
-        <img src="/images/bannerMain.png" alt="Coffee Banner">
+        <img src="images/bannerMain.png" alt="Coffee Banner">
         <div class="banner-content">
             <a href="shop.html" class="shop-now-btn">Shop Now</a>
         </div>
