--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mocha Coffee - Contact</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html" class="logo">
-                <img src="/images/logo.png" alt="Mocha Coffee Logo">
+                <img src="images/logo.png" alt="Mocha Coffee Logo">
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
@@ -24,7 +24,7 @@
     </header>
 
     <div class="banner contact-banner">
-        <img src="/images/banner-contact.png" alt="Contact Banner">
+        <img src="images/banner-contact.png" alt="Contact Banner">
         <div class="banner-content">
         </div>
     </div>
@@ -62,10 +62,10 @@
             <p class="email">info@mocha.com</p>
             <div class="social-links">
                 <a href="#" class="social-icon">
-                    <img src="/images/instagram-icon.png" alt="Instagram">
+                    <img src="images/instagram-icon.png" alt="Instagram">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="/images/twitter-icon.png" alt="Twitter">
+                    <img src="images/twitter-icon.png" alt="Twitter">
                 </a>
             </div>
         </div>
