--- a/about.html
+++ b/about.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mocha Coffee - About Us</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Mocha Coffee Logo">
+                <img src="/images/logo.png" alt="Mocha Coffee Logo">
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
                 <a href="shop.html">Shop</a>
-                <a href="about.html">About</a>
+                <a href="about.html" class="active">About</a>
                 <a href="contact.html">Contact</a>
             </div>
         </nav>
     </header>
 
     <div class="banner about-banner">
-        <img src="images/banner-about.png" alt="About Us Banner">
+        <img src="/images/banner-about.png" alt="About Us Banner">
         <div class="banner-content">
         </div>
     </div>
@@ -32,7 +32,7 @@
         <section class="about-content-section">
             <div class="about-row">
                 <div class="about-image">
-                    <img src="images/about-1.png" alt="Coffee Making">
+                    <img src="/images/about-1.png" alt="Coffee Making">
                 </div>
                 <div class="about-text">
                     <h2>Welcome</h2>
@@ -44,7 +44,7 @@
                     <p>Mocha Coffee is more than just a brand—it's a community of people who celebrate the art of coffee. From handpicked beans to carefully designed blends, every sip tells a story of quality and care.</p>
                 </div>
                 <div class="about-image">
-                    <img src="images/about-2.png" alt="Coffee Beans">
+                    <img src="/images/about-2.png" alt="Coffee Beans">
                 </div>
             </div>
         </section>
@@ -55,10 +55,10 @@
             <p class="email">info@mocha.com</p>
             <div class="social-links">
                 <a href="#" class="social-icon">
-                    <img src="images/instagram-icon.png" alt="Instagram">
+                    <img src="/images/instagram-icon.png" alt="Instagram">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="images/twitter-icon.png" alt="Twitter">
+                    <img src="/images/twitter-icon.png" alt="Twitter">
                 </a>
             </div>
         </div>
