--- a/shop.html
+++ b/shop.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mocha Coffee - Shop</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="images/favicon.png">
+    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <script defer src="main.js"></script>
 </head>
 <body>
     <header>
         <nav>
             <a href="index.html" class="logo">
-                <img src="images/logo.png" alt="Mocha Coffee Logo">
+                <img src="/images/logo.png" alt="Mocha Coffee Logo">
             </a>
             <div class="nav-links">
                 <a href="index.html">Home</a>
-                <a href="shop.html">Shop</a>
+                <a href="shop.html" class="active">Shop</a>
                 <a href="about.html">About</a>
                 <a href="contact.html">Contact</a>
             </div>
@@ -27,23 +28,23 @@
             <h1>SHOP MOCHA COFFEE</h1>
             <div class="shop-filters">
                 <div class="filter-option">
-                    <img src="images/shop-icon.png" alt="Shop All">
+                    <img src="/images/shop-icon.png" alt="Shop All">
                     <p>Shop all</p>
                 </div>
                 <div class="filter-option">
-                    <img src="images/capsules-icon.png" alt="Capsules">
+                    <img src="/images/capsules-icon.png" alt="Capsules">
                     <p>Capsules</p>
                 </div>
                 <div class="filter-option">
-                    <img src="images/beans-icon.png" alt="Coffee Beans">
+                    <img src="/images/beans-icon.png" alt="Coffee Beans">
                     <p>Coffee beans</p>
                 </div>
                 <div class="filter-option">
-                    <img src="images/ground-icon.png" alt="Ground Coffee">
+                    <img src="/images/ground-icon.png" alt="Ground Coffee">
                     <p>Ground coffee</p>
                 </div>
                 <div class="filter-option">
-                    <img src="images/packs-icon.png" alt="Packs">
+                    <img src="/images/packs-icon.png" alt="Packs">
                     <p>Packs</p>
                 </div>
             </div>
@@ -52,43 +53,48 @@
         <section class="products-section">
             <div class="products-grid">
                 <div class="product-card">
-                    <img src="images/pack-capsule.png" alt="Classic Capsule">
+                    <img src="/images/pack-capsule.png" alt="Classic Capsule">
                     <h3>Classic capsule</h3>
                 </div>
                 <div class="product-card">
-                    <img src="images/specialty-capsule.png" alt="Specialty Capsule">
+                    <img src="/images/specialty-capsule.png" alt="Specialty Capsule">
                     <h3>Specialty capsule</h3>
                 </div>
                 <div class="product-card">
-                    <img src="images/pack-beans.png" alt="Classic Coffee Bean">
+                    <img src="/images/pack-beans.png" alt="Classic Coffee Bean">
                     <h3>Classic coffee bean</h3>
                 </div>
                 <div class="product-card">
-                    <img src="images/specialty-beans.png" alt="Specialty Coffee Bean">
+                    <img src="/images/specialty-beans.png" alt="Specialty Coffee Bean">
                     <h3>Specialty coffee bean</h3>
                 </div>
                 <div class="product-card">
-                    <img src="images/pack-capsule.png" alt="Classic Ground Coffee">
+                    <img src="/images/pack-ground.png" alt="Classic Ground Coffee">
                     <h3>Classic ground coffee</h3>
                 </div>
                 <div class="product-card">
-                    <img src="images/specialty-ground.png" alt="Specialty Ground Coffee">
+                    <img src="/images/specialty-ground.png" alt="Specialty Ground Coffee">
                     <h3>Specialty ground coffee</h3>
                 </div>
                 <div class="product-card">
                     <div class="offer-tag">3x2</div>
-                    <img src="images/pack-capsule.png" alt="Pack Capsules">
+                    <img src="/images/pack-capsule.png" alt="Pack Capsules">
                     <h3>Pack capsules</h3>
                 </div>
                 <div class="product-card">
                     <div class="offer-tag">3x2</div>
-                    <img src="images/pack-beans.png" alt="Pack Coffee Beans">
+                    <img src="/images/pack-beans.png" alt="Pack Coffee Beans">
                     <h3>Pack coffee beans</h3>
                 </div>
                 <div class="product-card">
                     <div class="offer-tag">3x2</div>
-                    <img src="images/pack-ground.png" alt="Pack Ground Coffee">
+                    <img src="/images/pack-ground.png" alt="Pack Ground Coffee">
                     <h3>Pack ground coffee</h3>
+                </div>
+                <div class="product-card">
+                    <div class="offer-tag">3x2</div>
+                    <img src="/images/pack-mix.png" alt="Pack Mix">
+                    <h3>Pack mix</h3>
                 </div>
             </div>
         </section>
@@ -99,13 +105,37 @@
             <p class="email">info@mocha.com</p>
             <div class="social-links">
                 <a href="#" class="social-icon">
-                    <img src="images/instagram-icon.png" alt="Instagram">
+                    <img src="/images/instagram-icon.png" alt="Instagram">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="images/twitter-icon.png" alt="Twitter">
+                    <img src="/images/twitter-icon.png" alt="Twitter">
                 </a>
             </div>
         </div>
     </footer>
+
+    <div class="product-modal">
+        <div class="modal-content">
+            <span class="close-modal">&times;</span>
+            <div class="modal-body">
+                <img class="modal-image" src="" alt="">
+                <h2 class="modal-title"></h2>
+                <div class="modal-offer">3x2</div>
+                <p class="product-description"></p>
+                <div class="product-details">
+                    <div class="detail origin">
+                        <strong>Origin:</strong> <span class="detail-origin">Premium Selection</span>
+                    </div>
+                    <div class="detail roast">
+                        <strong>Roast Level:</strong> <span class="detail-roast">Medium</span>
+                    </div>
+                    <div class="detail flavor">
+                        <strong>Flavor Notes:</strong> <span class="detail-flavor">Rich & Smooth</span>
+                    </div>
+                </div>
+                <button class="add-to-cart-btn">Add to Cart</button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
