--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mocha Coffee - Home</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" href="/images/favicon.png">
+    <link rel="icon" type="image/png" href="images/favicon.png">
     <script src="main.js"></script>
 
 </head>
@@ -13,7 +13,7 @@
     <header>
         <nav>
             <a href="index.html" class="logo">
-                <img src="/images/logo.png" alt="Mocha Coffee Logo">
+                <img src="images/logo.png" alt="Mocha Coffee Logo">
             </a>
             <div class="nav-links">
                 <a href="index.html" class="active">Home</a>
@@ -25,7 +25,7 @@
     </header>
 
     <div class="banner">
-        <img src="/images/bannerMain.png" alt="Coffee Banner">
+        <img src="images/bannerMain.png" alt="Coffee Banner">
         <div class="banner-content">
             <a href="shop.html" class="shop-now-btn">Shop Now</a>
         </div>
@@ -35,7 +35,7 @@
         <section class="yellow-section">
             <div class="yellow-section-content">
                 <div class="yellow-section-image">
-                    <img src="/images/coffemain1.png" alt="Coffee Cup">
+                    <img src="images/coffemain1.png" alt="Coffee Cup">
                 </div>
                 <div class="yellow-section-text">
                     <h2>Mocha coffee</h2>
@@ -50,15 +50,15 @@
             <h2>All you need</h2>
             <div class="coffee-types">
                 <div class="coffee-type">
-                    <img src="/images/capsules-icon.png" alt="Capsules">
+                    <img src="images/capsules-icon.png" alt="Capsules">
                     <p>Capsules</p>
                 </div>
                 <div class="coffee-type">
-                    <img src="/images/beans-icon.png" alt="Coffee beans">
+                    <img src="images/beans-icon.png" alt="Coffee beans">
                     <p>Coffee beans</p>
                 </div>
                 <div class="coffee-type">
-                    <img src="/images/ground-icon.png" alt="Ground coffee">
+                    <img src="images/ground-icon.png" alt="Ground coffee">
                     <p>Ground coffee</p>
                 </div>
             </div>
@@ -72,22 +72,22 @@
                 <div class="packs-grid">
                     <div class="pack-card">
                         <div class="offer-tag">3x2</div>
-                        <img src="/images/pack-capsule.png" alt="Pack Capsules">
+                        <img src="images/pack-capsule.png" alt="Pack Capsules">
                         <h3>Pack capsules</h3>
                     </div>
                     <div class="pack-card">
                         <div class="offer-tag">3x2</div>
-                        <img src="/images/pack-beans.png" alt="Pack Coffee Beans">
+                        <img src="images/pack-beans.png" alt="Pack Coffee Beans">
                         <h3>Pack coffee beans</h3>
                     </div>
                     <div class="pack-card">
                         <div class="offer-tag">3x2</div>
-                        <img src="/images/pack-ground.png" alt="Pack Ground Coffee">
+                        <img src="images/pack-ground.png" alt="Pack Ground Coffee">
                         <h3>Pack ground coffee</h3>
                     </div>
                     <div class="pack-card">
                         <div class="offer-tag">3x2</div>
-                        <img src="/images/pack-mix.png" alt="Pack Mix">
+                        <img src="images/pack-mix.png" alt="Pack Mix">
                         <h3>Pack mix</h3>
                     </div>
                 </div>
@@ -101,10 +101,10 @@
             <p class="email">info@mocha.com</p>
             <div class="social-links">
                 <a href="#" class="social-icon">
-                    <img src="/images/instagram-icon.png" alt="Instagram">
+                    <img src="images/instagram-icon.png" alt="Instagram">
                 </a>
                 <a href="#" class="social-icon">
-                    <img src="/images/twitter-icon.png" alt="Twitter">
+                    <img src="images/twitter-icon.png" alt="Twitter">
                 </a>
             </div>
         </div>
